pi-cluster/cluster/apps/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http-initial
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns
  type: LoadBalancer
  externalTrafficPolicy: Local
