pi-cluster/cluster/apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: adguard
  namespace: adguard
spec:
  rules:
    - host: "adguard.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: adguard
                port:
                  number: 80
  tls:
    - hosts:
        - adguard.${SECRET_DOMAIN}
      secretName: adguard-tls
